tests/e2e/tests/pilot/testdata/networking/v1alpha3/rule-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - c
  http:
    - match:
      - headers:
          version:
            exact: v2
        sourceLabels:
          version: v1
      route:
      - destination:
          host: c
          subset: v2
        weight: 100
      fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 5s
        abort:
          percentage:
            value: 100.0
          httpStatus: 503
